--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "description": "Chat gpt clone",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server":"nodemon index.js",
+    "start":"node index.js"
   },
   "author": "Learn with PKP",
   "license": "ISC",
@@ -15,6 +17,7 @@
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "mongoose": "^8.1.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemon": "^3.0.3"
   }
 }
